2007-09-08  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	Patch by Ernesto Carrea <equistango at gmail.com>. Partially 
	fixes #82734.

	* ListView.cs: Remove extra space between rows in Details view (match
	.Net). 
	* ThemeWin32Classic.cs: Header text should use ListView.Font, not
	the DefaultFont.

2007-09-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* Application.cs: Modified ProductVersion to return value of
	AssemblyInformationVersion if available, and fallback to assembly
	version. Fixes bug #82746. Code formatting.
	* BindingSource.cs: Remove NIE from Dispose, and mark it MonoTODO
	instead.

2007-09-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Control.cs: When updating ZOrder for a child control,
	take into account the implicit ones (we need it in our controls
	using them). Fixes #82642.

2007-09-07  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: Add support for animated images.
	[Fixes bug #82726]

2007-09-07  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Make sure we aren't drawing anything that isn't 
	visible.  [Fixes bug #82727]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItem.cs: If AutoSize changes the size of our item, invalidate
	so we repaint using the new size.  [Fixes bug #82723]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: If ShowLines is true, we should ignore the FullRowSelect
	option.  [Fixes bug #81779]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Override HandleClick because the StandardClick style is
	set to false.  According to MSDN (and testing), the click events should
	only be raised when the click occurs on a TreeNode.  [Fixes bug #81739]

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBox.cs: Invalidate our textbox when it loses focus, so
	the border will disappear.  Fixes reopened #82653.

2007-09-06  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: If the control is autosize, and its preferred size changes